Create and style list UI and modal

--- a/src/style.css
+++ b/src/style.css
@@ -54,12 +54,73 @@ nav {
     cursor: pointer;
 }
 
-main {
-    grid-area: 2 / 2 / 3 / 3;
-    background-color: rgb(201, 193, 193);
-}
-
 footer {
     grid-area: 3 / 1 / 4 / 3;
     background-color: rgb(37, 42, 58);
+}
+
+main {
+    grid-area: 2 / 2 / 3 / 3;
+    background-color: rgb(201, 193, 193);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 5rem;
+    gap: 2rem;
+    overflow-y: scroll;
+}
+
+#add-item {
+    font-size: 2rem;
+    cursor: pointer;
+}
+
+#items {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.item {
+    background-color: grey;
+    flex: 1 0 1.5rem;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: .5rem;
+}
+
+.item > div:last-child {
+    display: flex;
+    gap: .6rem;
+}
+
+.item > div:last-child > button {
+    border-radius: 15px;
+    border: none;
+}
+
+#modal {
+    height: 6rem;
+    width: 34rem;
+}
+
+#note {
+    margin-left: .5rem;
+    width: 30rem;
+}
+
+#date {
+    margin-left: .6rem;
+    margin-top: 1rem;
+}
+
+#modal > div:last-child {
+    margin-top: 1rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
 }
