--- a/src/style.css
+++ b/src/style.css
@@ -44,14 +44,16 @@ nav {
     font-size: 1.75rem;
 }
 
-#home {
-    width: 100%;
-    text-align: center;
+.selection {
     cursor: pointer;
 }
 
 #projects {
-    cursor: pointer;
+    border-top: 1px solid grey;
+    height: 100%;
+    width: 100%;
+    padding-top: 2rem;
+    gap: 2rem;
 }
 
 footer {
@@ -67,7 +69,7 @@ main {
     align-items: center;
     padding: 2rem 5rem;
     gap: 2rem;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 #add-item {
