--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,6 @@ body {
 header {
     grid-area: 1 / 1 / 2 / 3;
     background-color: rgb(37, 42, 58);
-    padding: 1rem;
     color: white;
     display: grid;
     grid-template-columns: 1fr 5fr;
@@ -29,6 +28,8 @@ header {
     grid-column: 1 / 2;
     display: flex;
     align-items: center;
+    justify-content: center;
+    padding: 0 1rem;
     height: 100%;
     font-size: 3rem;
     font-weight: 700;
@@ -40,6 +41,7 @@ header {
     justify-content: center;
     align-items: center;
     font-size: 2.5rem;
+    padding: 1rem;
 }
 
 nav {
